fix: broken style on mobile for seuranta guide

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -148,8 +148,8 @@ table {
 
         #seuranta-join {
             color: light-dark(rgb(0, 255, 255), rgb(34, 0, 255));
-            position: absolute;
-            bottom: 2em;
+            margin-top: auto;
+            margin-bottom: 0.5em;
             &:visited {
                 color: light-dark(rgb(255, 128, 192), rgb(169, 34, 163));
             }
